--- a/index.html
+++ b/index.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>QuadraComply Map</title>
-  <!-- Leaflet CSS -->
+  <meta charset="utf-8" />
+  <title>QuadraMapDemo</title>
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet/dist/leaflet.css"
   />
   <style>
-    html, body { margin: 0; padding: 0; height: 100%; }
-    #mapid { width: 100%; height: 100%; }
+    html, body { margin:0; padding:0; height:100%; }
+    #mapid { width:100%; height:100%; }
   </style>
 </head>
 <body>
-  <!-- single map container -->
   <div id="mapid"></div>
 
-  <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    // 1. initialize the map
+    // Initialize map
     const map = L.map('mapid').setView([20, 0], 2);
-
-    // 2. add base tiles
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       attribution: '&copy; OpenStreetMap contributors'
     }).addTo(map);
 
-    // 3. load and display GeoJSON borders
-    fetch('countries.geo.json')
-      .then(res => res.json())
-      .then(geo => {
-        L.geoJSON(geo, {
-          style: {
-            color: '#333',
-            weight: 1,
-            fillColor: '#888',
-            fillOpacity: 0.4
-          }
-        }).addTo(map);
+    // Load your GeoJSON
+    fetch('custom.geo.json')
+      .then(res => {
+        if (!res.ok) throw new Error('GeoJSON load failed: ' + res.status);
+        return res.json();
       })
-      .catch(err => console.error('Could not load GeoJSON:', err));
+      .then(data => {
+        L.geoJSON(data).addTo(map);
+        console.log('GeoJSON loaded, features:', data.features.length);
+      })
+      .catch(err => console.error(err));
   </script>
 </body>
 </html>
