--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>QuadraMapDemo</title>
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet/dist/leaflet.css"
-  />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
     html, body { margin:0; padding:0; height:100%; }
     #mapid { width:100%; height:100%; }
@@ -14,24 +11,16 @@
 </head>
 <body>
   <div id="mapid"></div>
-
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    const map = L.map('mapid').setView([20, 0], 2);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
+    const map = L.map('mapid').setView([20,0],2);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+      attribution:'© OpenStreetMap contributors'
     }).addTo(map);
-
     fetch('custom.geo.json')
-      .then(res => {
-        if (!res.ok) throw new Error('GeoJSON load failed: ' + res.status);
-        return res.json();
-      })
-      .then(data => {
-        L.geoJSON(data).addTo(map);
-        console.log('GeoJSON loaded, features:', data.features.length);
-      })
-      .catch(err => console.error(err));
+      .then(r=>{ if(!r.ok) throw new Error('GeoJSON load failed '+r.status); return r.json(); })
+      .then(data=>{ L.geoJSON(data).addTo(map); console.log('GeoJSON loaded, features:', data.features.length); })
+      .catch(e=>console.error(e));
   </script>
 </body>
 </html>
