--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>QuadraMapDemo</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+  <link rel="stylesheet" href="leaflet.css"/>
   <style>
     html, body { margin:0; padding:0; height:100%; }
     #mapid { width:100%; height:100%; }
@@ -11,16 +11,7 @@
 </head>
 <body>
   <div id="mapid"></div>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    const map = L.map('mapid').setView([20,0],2);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
-      attribution:'© OpenStreetMap contributors'
-    }).addTo(map);
-    fetch('custom.geo.json')
-      .then(r=>{ if(!r.ok) throw new Error('GeoJSON load failed '+r.status); return r.json(); })
-      .then(data=>{ L.geoJSON(data).addTo(map); console.log('GeoJSON loaded, features:', data.features.length); })
-      .catch(e=>console.error(e));
-  </script>
+  <script src="leaflet.js"></script>
+  <script src="map.js"></script>
 </body>
 </html>
