--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8">
   <title>QuadraMapDemo</title>
-  <link rel="stylesheet" href="leaflet.css"/>
-  <style>
-    html, body { margin:0; padding:0; height:100%; }
-    #mapid { width:100%; height:100%; }
-  </style>
+  <link rel="stylesheet" href="leaflet.css">
+  <style>html,body{margin:0;height:100%}#mapid{width:100%;height:100%}</style>
 </head>
 <body>
   <div id="mapid"></div>
