--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
+  <head>
   <meta charset="utf-8">
   <title>QuadraMapDemo</title>
   <link rel="stylesheet" href="leaflet.css">
-  <style>html,body{margin:0;height:100%}#mapid{width:100%;height:100%}</style>
-</head>
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+    }
+    #mapid {
+      width: 100%;
+      height: 100%;
+    }
+    /* Legend swatch styling */
+    .legend i {
+      display: inline-block;
+      width: 18px;
+      height: 18px;
+      margin-right: 6px;
+      opacity: 0.8;
+      vertical-align: middle;
+    }
+  </style>
+  </head>
 <body>
   <div id="mapid"></div>
   <script src="leaflet.js"></script>
