--- a/index.html
+++ b/index.html
@@ -13,46 +13,24 @@
       width: 100%;
       height: 100%;
     }
-    /* Filter panel */
-    .filters {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: white;
-      padding: 8px;
-      border-radius: 4px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      z-index: 1000;
-      font-family: sans-serif;
-      font-size: 14px;
-    }
-    .filters h4 {
-      margin: 0 0 8px;
-      font-size: 16px;
-    }
-    /* Legend container styling */
     .legend {
       background: white;
       padding: 6px;
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      font-family: sans-serif;
+      font-size: 14px;
+    }
+    .legend i {
+      display: inline-block;
+      width: 18px;
+      height: 18px;
+      margin-right: 6px;
+      vertical-align: middle;
     }
   </style>
 </head>
 <body>
-  <div id="filters" class="filters">
-    <h4>Filters</h4>
-    <label><input type="checkbox" id="fatfBlack"> FATF Blacklist</label><br>
-    <label><input type="checkbox" id="fatfGrey"> FATF Greylist</label><br>
-    <label><input type="checkbox" id="egmont"> Egmont Member</label><br>
-    <label><input type="checkbox" id="basel"> Basel Member</label><br>
-    <label>
-      CPI ≥ 
-      <input type="range" id="cpiRange" min="0" max="100" value="0">
-      <span id="cpiValue">0</span>
-    </label>
-  </div>
-
   <div id="mapid"></div>
 
   <script src="leaflet.js"></script>
