--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       width: 100%;
       height: 100%;
     }
+    /* Legend styling */
     .legend {
       background: white;
       padding: 6px;
