--- a/index.html
+++ b/index.html
@@ -5,15 +5,8 @@
   <title>QuadraMapDemo</title>
   <link rel="stylesheet" href="leaflet.css">
   <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-    }
-    #mapid {
-      width: 100%;
-      height: 100%;
-    }
-    /* Legend styling */
+    html, body { margin: 0; height: 100%; }
+    #mapid { width: 100%; height: 100%; }
     .legend {
       background: white;
       padding: 6px;
@@ -28,12 +21,12 @@
       height: 18px;
       margin-right: 6px;
       vertical-align: middle;
+      opacity: 0.8;
     }
   </style>
 </head>
 <body>
   <div id="mapid"></div>
-
   <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
