--- a/index.html
+++ b/index.html
@@ -6,21 +6,16 @@
   <link rel="stylesheet" href="leaflet.css">
   <style>
     html, body { margin: 0; height: 100%; }
-    #mapid { width: 100%; height: 100%; }
+    #mapid      { width: 100%; height: 100%; }
     .legend {
-      background: white;
-      padding: 6px;
+      background: white; padding: 6px;
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      font-family: sans-serif;
-      font-size: 14px;
+      font-family: sans-serif; font-size: 14px;
     }
     .legend i {
-      display: inline-block;
-      width: 18px;
-      height: 18px;
-      margin-right: 6px;
-      vertical-align: middle;
+      display: inline-block; width: 18px; height: 18px;
+      margin-right: 6px; vertical-align: middle;
       opacity: 0.8;
     }
   </style>
