--- a/index.html
+++ b/index.html
@@ -5,28 +5,34 @@
   <title>QuadraMapDemo</title>
   <link rel="stylesheet" href="leaflet.css">
   <style>
-    html, body { margin:0; height:100%; }
-    #mapid     { width:100%; height:100%; }
+    html, body {
+      margin: 0;
+      height: 100%;
+    }
+    #mapid {
+      width: 100%;
+      height: 100%;
+    }
     .legend {
       background: white;
-      padding: 6px;
+      padding: 6px 8px;
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
       font-family: sans-serif;
-      font-size: 14px;
+      font-size: 12px;
+      line-height: 1.4;
     }
-    .legend i {
-      display: inline-block;
-      width: 18px;
-      height: 18px;
-      margin-right: 6px;
-      vertical-align: middle;
-      opacity: 0.8;
+    .legend small {
+      display: block;
+      text-align: center;
+      margin-top: 4px;
+      color: #555;
     }
   </style>
 </head>
 <body>
   <div id="mapid"></div>
+
   <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
