--- a/index.html
+++ b/index.html
@@ -1,42 +1,18 @@
-<!DOCTYPE html>
-<html lang="de">
+<!doctype html>
+<html>
 <head>
   <meta charset="utf-8">
   <title>QuadraMapDemo</title>
-  <link rel="stylesheet" href="leaflet.css">
+  <link rel="stylesheet" href="leaflet.css"/>
   <style>
-    html, body { margin:0; height:100% }
-    #mapid { width:100%; height:100% }
-
-    .legend {
-      background: white;
-      padding: 6px;
-      border-radius: 4px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      font-family: sans-serif;
-      font-size: 13px;
-      line-height: 18px;
-    }
-    .legend i {
-      display: inline-block;
-      width: 18px;
-      height: 18px;
-      margin-right: 6px;
-      vertical-align: middle;
-      opacity: 0.8;
-    }
-
-    .tooltip-score {
-      background: rgba(255,255,255,0.9);
-      border-radius: 4px;
-      padding: 4px 6px;
-      font-size: 13px;
-      line-height: 1.2;
-    }
+    html,body{margin:0;height:100%}
+    #map{width:100%;height:100%}
+    .legend { background:white; padding:6px; font:12px sans-serif; }
+    .legend i { width:18px; height:18px; float:left; margin-right:8px; opacity:0.7; }
   </style>
 </head>
 <body>
-  <div id="mapid"></div>
+  <div id="map"></div>
   <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
