--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
   <title>QuadraMapDemo</title>
   <link rel="stylesheet" href="leaflet.css">
   <style>
-    html, body { margin:0; height:100%; }
-    #mapid     { width:100%; height:100%; }
+    html, body {
+      margin: 0;
+      height: 100%;
+    }
+    #mapid {
+      width: 100%;
+      height: 100%;
+    }
     .legend {
       background: white;
       padding: 6px;
@@ -27,6 +33,7 @@
 </head>
 <body>
   <div id="mapid"></div>
+
   <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
