--- a/index.html
+++ b/index.html
@@ -5,35 +5,27 @@
   <title>QuadraMapDemo</title>
   <link rel="stylesheet" href="leaflet.css">
   <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-    }
-    #mapid {
-      width: 100%;
-      height: 100%;
-    }
+    html, body { margin:0; height:100% }
+    #mapid { width:100%; height:100% }
     .legend {
-      background: white;
-      padding: 6px;
-      border-radius: 4px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      font-family: sans-serif;
-      font-size: 14px;
+      background:white;
+      padding:6px;
+      border-radius:4px;
+      box-shadow:0 2px 6px rgba(0,0,0,0.3);
+      font:14px sans-serif;
     }
     .legend i {
-      display: inline-block;
-      width: 18px;
-      height: 18px;
-      margin-right: 6px;
-      vertical-align: middle;
-      opacity: 0.8;
+      display:inline-block;
+      width:18px;
+      height:18px;
+      margin-right:6px;
+      vertical-align:middle;
+      opacity:0.8;
     }
   </style>
 </head>
 <body>
   <div id="mapid"></div>
-
   <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
