--- a/index.html
+++ b/index.html
@@ -5,27 +5,36 @@
   <title>QuadraMapDemo</title>
   <link rel="stylesheet" href="leaflet.css">
   <style>
-    html, body { margin:0; height:100% }
-    #mapid { width:100%; height:100% }
+    html, body { margin:0; height:100%; }
+    #mapid { width:100%; height:100%; }
     .legend {
-      background:white;
-      padding:6px;
-      border-radius:4px;
-      box-shadow:0 2px 6px rgba(0,0,0,0.3);
-      font:14px sans-serif;
+      position: absolute;
+      bottom: 30px;
+      right: 10px;
+      background: white;
+      padding: 8px;
+      border-radius: 4px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      font-family: sans-serif;
+      font-size: 13px;
+      line-height: 1.4;
     }
-    .legend i {
-      display:inline-block;
-      width:18px;
-      height:18px;
-      margin-right:6px;
-      vertical-align:middle;
-      opacity:0.8;
+    .legend .gradient {
+      width: 120px;
+      height: 10px;
+      background: linear-gradient(to right, #00ff00, #ff0000);
+      margin: 4px 0;
     }
   </style>
 </head>
 <body>
   <div id="mapid"></div>
+  <div class="legend">
+    <strong>Risk Score</strong><br>
+    <div class="gradient"></div>
+    <span>Low</span><span style="float:right;">High</span>
+  </div>
+
   <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
