--- a/index.html
+++ b/index.html
@@ -3,38 +3,30 @@
 <head>
   <meta charset="utf-8">
   <title>QuadraMapDemo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="leaflet.css">
   <style>
-    html, body { margin:0; height:100%; }
-    #mapid { width:100%; height:100%; }
+    html, body { margin:0; height:100% }
+    #mapid { width:100vw; height:100vh; }
     .legend {
-      position: absolute;
-      bottom: 30px;
-      right: 10px;
       background: white;
-      padding: 8px;
+      padding: 6px;
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      font-family: sans-serif;
-      font-size: 13px;
-      line-height: 1.4;
+      font: 14px sans-serif;
     }
-    .legend .gradient {
-      width: 120px;
-      height: 10px;
-      background: linear-gradient(to right, #00ff00, #ff0000);
-      margin: 4px 0;
+    .legend i {
+      display: inline-block;
+      width: 18px;
+      height: 18px;
+      margin-right: 6px;
+      vertical-align: middle;
+      opacity: 0.8;
     }
   </style>
 </head>
 <body>
   <div id="mapid"></div>
-  <div class="legend">
-    <strong>Risk Score</strong><br>
-    <div class="gradient"></div>
-    <span>Low</span><span style="float:right;">High</span>
-  </div>
-
   <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
