--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QuadraMapDemo</title>
+  <title>QuadraMapDemo – US/EU/UK Sanctions Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="leaflet.css">
   <style>
-    html, body { margin:0; height:100% }
-    #mapid { width:100vw; height:100vh; }
+    html, body { margin: 0; padding: 0; height: 100%; }
+    #mapid { width: 100vw; height: 100vh; }
     .legend {
       background: white;
       padding: 6px;
@@ -27,6 +27,7 @@
 </head>
 <body>
   <div id="mapid"></div>
+
   <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
