--- a/index.html
+++ b/index.html
@@ -23,11 +23,52 @@
       vertical-align: middle;
       opacity: 0.8;
     }
+    /* Dropdown UI top right */
+    .dropdown-bar {
+      position: absolute;
+      top: 18px;
+      right: 26px;
+      z-index: 1000;
+      background: rgba(255,255,255,0.92);
+      padding: 8px 18px;
+      border-radius: 7px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.16);
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      font: 15px/1.4 sans-serif;
+    }
+    .dropdown-bar select {
+      font-size: 15px;
+      padding: 3px 9px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+    }
+    .dropdown-bar label {
+      margin-right: 3px;
+      font-weight: 600;
+    }
   </style>
 </head>
 <body>
-  <div id="mapid"></div>
+  <div class="dropdown-bar">
+    <label for="jurisdictionSelect">Jurisdiction:</label>
+    <select id="jurisdictionSelect">
+      <option value="US">US</option>
+      <option value="EU">EU</option>
+      <option value="UK">UK</option>
+    </select>
+    <label for="subcategorySelect">Category:</label>
+    <select id="subcategorySelect">
+      <option value="all">All Categories</option>
+      <option value="Sectoral">Sectoral</option>
+      <option value="Financial">Financial</option>
+      <option value="Goods">Goods</option>
+      <option value="Services">Services</option>
+    </select>
+  </div>
 
+  <div id="mapid"></div>
   <script src="leaflet.js"></script>
   <script src="map.js"></script>
 </body>
