--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
       font: 14px sans-serif;
+      line-height: 1.6;
     }
     .legend i {
       display: inline-block;
@@ -29,7 +30,7 @@
       top: 18px;
       right: 26px;
       z-index: 1000;
-      background: rgba(255,255,255,0.92);
+      background: rgba(255,255,255,0.95);
       padding: 8px 18px;
       border-radius: 7px;
       box-shadow: 0 1px 6px rgba(0,0,0,0.16);
@@ -37,6 +38,7 @@
       gap: 12px;
       align-items: center;
       font: 15px/1.4 sans-serif;
+      user-select: none;
     }
     .dropdown-bar select {
       font-size: 15px;
@@ -47,6 +49,10 @@
     .dropdown-bar label {
       margin-right: 3px;
       font-weight: 600;
+    }
+    /* Keep dropdowns above map popups */
+    .leaflet-popup {
+      z-index: 900 !important;
     }
   </style>
 </head>
