--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
       font: 14px sans-serif;
-      line-height: 1.6;
     }
     .legend i {
       display: inline-block;
@@ -30,7 +29,7 @@
       top: 18px;
       right: 26px;
       z-index: 1000;
-      background: rgba(255,255,255,0.95);
+      background: rgba(255,255,255,0.92);
       padding: 8px 18px;
       border-radius: 7px;
       box-shadow: 0 1px 6px rgba(0,0,0,0.16);
@@ -38,7 +37,6 @@
       gap: 12px;
       align-items: center;
       font: 15px/1.4 sans-serif;
-      user-select: none;
     }
     .dropdown-bar select {
       font-size: 15px;
@@ -50,9 +48,10 @@
       margin-right: 3px;
       font-weight: 600;
     }
-    /* Keep dropdowns above map popups */
-    .leaflet-popup {
-      z-index: 900 !important;
+    /* Popup scroll accessibility */
+    .leaflet-popup-content {
+      max-height: 320px;
+      overflow-y: auto;
     }
   </style>
 </head>
