--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       border-radius: 4px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
       font: 14px sans-serif;
-      margin-bottom: 12px;
     }
     .legend i {
       display: inline-block;
@@ -30,7 +29,7 @@
       top: 18px;
       right: 26px;
       z-index: 1000;
-      background: rgba(255,255,255,0.94);
+      background: rgba(255,255,255,0.92);
       padding: 8px 18px;
       border-radius: 7px;
       box-shadow: 0 1px 6px rgba(0,0,0,0.16);
@@ -49,24 +48,26 @@
       margin-right: 3px;
       font-weight: 600;
     }
-    /* Popup scroll fix */
+
+    /* --- POPUP SCROLL FIX --- */
     .leaflet-popup-content {
       max-height: 270px;
-      overflow-y: auto !important;
-      padding-right: 6px;
+      overflow-y: auto;
     }
-    /* Allow popup to be clickable for "see more" or links */
-    .leaflet-popup-content a {
-      color: #135db4;
-      text-decoration: underline;
-      word-break: break-all;
-      cursor: pointer;
+    @media (max-width: 700px) {
+      .leaflet-popup-content {
+        max-height: 180px;
+      }
     }
-    .leaflet-popup-content ul {
-      margin-top: 6px;
-      margin-bottom: 0;
-      padding-left: 22px;
-      font-size: 14px;
+    @media (min-width: 1100px) {
+      .leaflet-popup-content {
+        max-height: 370px;
+      }
+    }
+    /* Optional: Tweak popup width for readability */
+    .leaflet-popup-content {
+      min-width: 280px;
+      max-width: 390px;
     }
   </style>
 </head>
