--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      width: 100%;
-      overflow: hidden; /* Prevent scrolling past map */
+      width: 100vw;
+      height: 100vh;
+      max-width: 100vw;
+      max-height: 100vh;
+      overflow: hidden !important;
+      box-sizing: border-box;
+      position: fixed; /* Absolutely no scroll */
+      top: 0;
+      left: 0;
     }
     #mapid {
       position: fixed;
-      top: 0; left: 0;
+      left: 0;
+      top: 0;
       width: 100vw;
       height: 100vh;
       z-index: 0;
+      overflow: hidden !important;
     }
     .dropdown-bar {
       position: absolute;
@@ -59,7 +67,6 @@
       vertical-align: middle;
       opacity: 0.8;
     }
-    /* Optional: Custom styling for Leaflet popups to prevent overflow */
     .leaflet-popup-content-wrapper,
     .leaflet-popup-content {
       max-height: 420px;
