--- a/index.html
+++ b/index.html
@@ -2,80 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>QuadraMapDemo – US/EU/UK Sanctions Map</title>
+  <title>QuadraMap Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="leaflet.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
-    html, body { margin: 0; padding: 0; height: 100%; }
-    #mapid { width: 100vw; height: 100vh; }
-    .legend {
-      background: white;
-      padding: 6px;
-      border-radius: 4px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      font: 14px sans-serif;
-    }
-    .legend i {
-      display: inline-block;
-      width: 18px;
-      height: 18px;
-      margin-right: 6px;
-      vertical-align: middle;
-      opacity: 0.8;
-    }
-    /* Dropdown UI top right */
-    .dropdown-bar {
+    html, body { height: 100%; margin: 0; padding: 0; }
+    #mapid { height: 90vh; width: 100vw; }
+    .controls {
+      padding: 10px;
+      background: #fff;
+      z-index: 1001;
       position: absolute;
-      top: 18px;
-      right: 26px;
-      z-index: 1000;
-      background: rgba(255,255,255,0.92);
-      padding: 8px 18px;
-      border-radius: 7px;
-      box-shadow: 0 1px 6px rgba(0,0,0,0.16);
+      top: 10px;
+      left: 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       display: flex;
-      gap: 12px;
-      align-items: center;
-      font: 15px/1.4 sans-serif;
+      gap: 10px;
     }
-    .dropdown-bar select {
-      font-size: 15px;
-      padding: 3px 9px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
+    .legend {
+      background: #fff;
+      padding: 8px;
+      border-radius: 6px;
+      font-size: 12px;
+      line-height: 1.3;
+      color: #333;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
-    .dropdown-bar label {
-      margin-right: 3px;
-      font-weight: 600;
+    .custom-leaflet-popup .leaflet-popup-content-wrapper {
+      max-height: 55vh;
+      overflow-y: auto !important;
     }
-    /* Scrollable popup styling */
     .custom-leaflet-popup .leaflet-popup-content {
-      max-height: 220px;
-      overflow-y: auto;
-      margin: 0;
-      padding-right: 2px;
+      max-height: 52vh;
+      overflow-y: auto !important;
     }
+    /* Keep the map fixed and avoid page scrollbars */
+    body, html { overflow: hidden; }
   </style>
 </head>
 <body>
-  <div class="dropdown-bar">
-    <label for="jurisdictionSelect">Jurisdiction:</label>
-    <select id="jurisdictionSelect">
-      <option value="US">US</option>
-      <option value="EU">EU</option>
-      <option value="UK">UK</option>
-    </select>
-    <label for="subcategorySelect">Category:</label>
-    <select id="subcategorySelect">
-      <option value="all">All Categories</option>
-      <option value="Sectoral">Sectoral</option>
-      <option value="Financial">Financial</option>
-      <option value="Goods">Goods</option>
-      <option value="Services">Services</option>
-    </select>
+  <div class="controls">
+    <label>
+      Jurisdiction:
+      <select id="jurisdictionSelect">
+        <option value="US">US</option>
+        <option value="EU">EU</option>
+        <option value="UK">UK</option>
+      </select>
+    </label>
+    <label>
+      Subcategory:
+      <select id="subcategorySelect">
+        <option value="all">All Categories</option>
+        <option value="Sectoral">Sectoral</option>
+        <option value="Financial">Financial</option>
+        <option value="Goods">Goods</option>
+        <option value="Services">Services</option>
+      </select>
+    </label>
   </div>
   <div id="mapid"></div>
-  <script src="leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="map.js"></script>
 </body>
 </html>
