--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <style>
-    html, body { height: 100%; margin: 0; padding: 0; }
-    #mapid { height: 90vh; width: 100vw; }
+    html, body { height: 100%; margin: 0; padding: 0; overflow: hidden; }
+    #mapid { height: 100vh; width: 100vw; }
     .controls {
-      padding: 10px;
-      background: #fff;
-      z-index: 1001;
       position: absolute;
-      top: 10px;
-      left: 10px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      z-index: 1001;
+      top: 15px;
+      left: 20px;
+      background: #fff;
+      padding: 8px 18px;
+      border-radius: 7px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.18);
+      font: 15px/1.4 sans-serif;
       display: flex;
-      gap: 10px;
+      gap: 16px;
+      align-items: center;
     }
     .legend {
       background: #fff;
@@ -37,8 +39,6 @@
       max-height: 52vh;
       overflow-y: auto !important;
     }
-    /* Keep the map fixed and avoid page scrollbars */
-    body, html { overflow: hidden; }
   </style>
 </head>
 <body>
