--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>QuadraMapDemo – US/EU/UK Sanctions Map</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="leaflet.css">
+  <link rel="stylesheet" href="leaflet.css?v=20240717">
   <style>
     html, body { margin: 0; padding: 0; height: 100%; }
     #mapid { width: 100vw; height: 100vh; }
@@ -89,7 +89,7 @@
   </div>
 
   <div id="mapid"></div>
-  <script src="leaflet.js"></script>
-  <script src="map.js"></script>
+  <script src="leaflet.js?v=20240717"></script>
+  <script src="map.js?v=20240717"></script>
 </body>
 </html>
